--- a/styles/look.css
+++ b/styles/look.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Biryani:wght@200&family=Cormorant+Garamond:wght@300&family=Cormorant+Infant:wght@300&family=EB+Garamond&family=Sarabun:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Biryani:wght@200&family=Cormorant+Garamond:wght@300&family=Sarabun:wght@100&family=Voltaire&display=swap');
 
 body {
     margin: 0;
@@ -21,7 +21,7 @@ header {
     display: grid;
     grid-template-columns: repeat(20, 10px);
     justify-content: space-around;
-    margin-top: 60px;
+    margin-top: 70px;
 }
 
 .nav-right-section li {    
